<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utils.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_id"
            android:inputType="number"
            android:padding="@dimen/textPadding"
            android:textSize="@dimen/textSize"
            android:layout_margin="@dimen/textPadding"
            > </EditText>

        <Button
            android:id="@+id/b_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_search"
            android:layout_margin="@dimen/textPadding"
            android:padding="@dimen/textPadding"
            android:textColor="@color/white"
            android:background="@color/vk_color"
            android:textSize="@dimen/textSize"
            ></Button>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textPadding"
            >
            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rezult"
                android:layout_margin="@dimen/textPadding"
                android:padding="@dimen/textPadding"
                android:textSize="@dimen/textSize"
                android:textColor="@color/black"
                android:visibility="invisible">


            </TextView>
        </ScrollView>
        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/textPadding"
            android:text="@string/tv_error_message"
            android:visibility="invisible"
            >
        </TextView>
    </FrameLayout>


</LinearLayout>